Fix main image getting cut off

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -8,6 +8,7 @@
 .mainPhoto {
     width: 100%;
     height: 80vh;
+    max-height: unset;
     object-fit: cover;
     object-position: center 75%;
 }
